--- a/index.html
+++ b/index.html
@@ -98,9 +98,15 @@
     </div>
   </section>
 
-  <!-- Footer -->
+  <!-- Footer con TikTok -->
   <footer class="bg-green-700 text-white text-center py-6">
-    <p>&copy; 2025 Juicy Mutant. Todos los derechos reservados. By Puchal and Pitrate.</p>
+    <div class="flex flex-col items-center gap-2">
+      <p>&copy; 2025 Juicy Mutant. Todos los derechos reservados. By Puchal.</p>
+      <a href="https://www.tiktok.com/@bypuchal_" target="_blank" class="flex items-center gap-2 hover:scale-110 transition-transform duration-300">
+        <svg class="w-5 h-5 fill-white" viewBox="0 0 24 24"><path d="M12.3 1.5h3.3c.2 2.3 1.7 4 4.2 4.4v3.3c-1.5 0-2.9-.4-4.1-1.1v7.9c0 6.1-6.4 9.7-11.8 6.7-3.3-1.9-4.4-6.1-2.4-9.4 1.2-2.1 3.4-3.3 5.8-3.3v3.4c-3.1.1-3.8 4.3-1 5.6 2.1 1.1 4.7-.4 4.7-2.7V1.5z"/></svg>
+        <span>@bypuchal_</span>
+      </a>
+    </div>
   </footer>
 
   <!-- AOS Script -->
@@ -112,7 +118,7 @@
     });
   </script>
 
-  <!-- Formspree + mensaje de éxito -->
+  <!-- Formspree -->
   <script>
     const form = document.getElementById('contact-form');
     const successMessage = document.getElementById('form-success');
